BUD-2559 quick search overflow fix

--- a/src/app/components/frame/frame.component.scss
+++ b/src/app/components/frame/frame.component.scss
@@ -150,9 +150,9 @@ $app-bar-icon: 32px;
             width: 500px;
           }
 
-          &::ng-deep {
+          &.overflow::ng-deep {
             yuv-search-filter-form.extras {
-              max-height: 80vh;
+              max-height: calc(100vh - 60px);
               overflow: auto;
             }
           }
